# BabbleChat

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
doc/: exchange_protocol.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/include/: requests.h
src/server/: CMakeLists.txt  main.cpp  request_handler.hpp
src/test_client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
